<resources>
    <string name="app_name">Firebase ChatApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_quick_chat">Get Started</string>
    <string name="login">Sign in</string>
    <string name="create_account">Sign up</string>
    <string name="login_or_create_an_account_to_get_started">Start with signing up or log in</string>
    <string name="login_to_your_account">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_a_new_account">Register</string>
    <string name="display_name">Display name</string>
    <string name="create">Sign up</string>
    <string name="user_image">Image</string>
    <string name="reenter_password">Re-Enter Password</string>
    <string name="title_users">Users</string>
    <string name="title_settings">Settings</string>
    <string name="title_chats">Chats</string>
    <string name="start_chat">Start Chat</string>
    <string name="enter_your_first_message_below">Enter your First Message Below</string>
    <string name="send">Send</string>
    <string name="message_hint">Input message here</string>
    <string name="message">Type...</string>
    <string name="close">Close</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="logout">Logout</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="your_name">Your name</string>
    <string name="email_address">Email Address</string>
    <string name="save">SAVE</string>
    <string name="change">Change</string>
    <string name="edit_name">Edit Name</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="change_email">Change Email</string>
    <string name="see_chats">See Chats</string>
    <string name="saved_media">Saved Media</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
</resources>