<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.firebasechatapp.ui.signup.SignupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/backgroundColor"
        android:layout_height="fill_parent">

        <LinearLayout
            android:id="@+id/textContentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:textColor="@color/textColor"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:gravity="start"
                android:text="@string/create_a_new_account"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_height="70dp"
                app:set_image_resource="@{viewmodel.imageUri}"
                android:layout_width="70dp"
                android:id="@+id/user_image"
                android:layout_marginBottom="20dp"
                android:onClick="@{() -> viewmodel.goToGallery()}"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_account_circle"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent">

                <EditText
                    android:id="@+id/editTextDisplayName"
                    android:layout_width="match_parent"
                    android:textColor="@color/textColor"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/display_name"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:maxLength="25"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@={viewmodel.displayNameText}"
                    tools:background="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="0dp"
                app:boxBackgroundColor="@android:color/transparent">

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:textColor="@color/textColor"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@={viewmodel.emailText}"
                    tools:background="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="0dp"
                app:boxBackgroundColor="@android:color/transparent">

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:ems="10"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLength="25"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@={viewmodel.passwordText}"
                    tools:background="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="0dp"
                app:boxBackgroundColor="@android:color/transparent">

                <EditText
                    android:id="@+id/reenterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/textColor"
                    android:hint="@string/reenter_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLength="25"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@={viewmodel.secondPassword}"
                    tools:background="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:textColor="@color/colorOnPrimary"
            android:layout_marginTop="58dp"
            android:backgroundTint="@color/colorAccent"
            android:enabled="@{!viewmodel.isCreatingAccount()}"
            android:onClick="@{() -> viewmodel.createAccountPressed()}"
            android:text="@string/create"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline50"
            tools:enabled="@{true}" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".6" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>